--- a/software/src/OpenocdCustomConfigFiles/rpi.cfg
+++ b/software/src/OpenocdCustomConfigFiles/rpi.cfg
@@ -1,7 +1,7 @@
 # rpi2.cfg: OpenOCD interface on RPi v2+
 
 # Use RPi GPIO pins
-interface bcm2835gpio
+adapter driver bcm2835gpio
 
 # Base address of I/O port
 bcm2835gpio_peripheral_base 0x3F000000
