--- a/software/src/OpenocdCustomConfigFiles/rpi1.cfg
+++ b/software/src/OpenocdCustomConfigFiles/rpi1.cfg
@@ -1,7 +1,7 @@
 # rpi1.cfg: OpenOCD interface on RPi zero and v1
 
 # Use RPi GPIO pins
-interface bcm2835gpio
+adapter driver bcm2835gpio
 
 # Base address of I/O port
 bcm2835gpio_peripheral_base 0x20000000
