--- a/software/src/OpenocdCustomConfigFiles/targets/at91samdXX.cfg
+++ b/software/src/OpenocdCustomConfigFiles/targets/at91samdXX.cfg
@@ -66,7 +66,7 @@ reset_config srst_gates_jtag
 # This limit is most probably imposed by incorrectly handled SWD WAIT
 # on some SWD adapters.
 
-adapter_khz 400
+adapter speed 400
 
 # Atmel's EDBG (on-board cmsis-dap adapter of Xplained kits) works
 # without problem at maximal clock speed. Atmel recommends
